--- a/views/login.ejs
+++ b/views/login.ejs
@@ -17,8 +17,22 @@
       </div>
     </div>
 
-    <form class="signup_login" action="">
+    <form class="signup_login" action="login" method="POST">
       <h2>Log In!</h2>
+
+      <ul>
+        <% if(messages.success_msg) { %>
+        <li><%= messages.success_msg %></li>
+        <% } %>
+      </ul>
+
+      <ul>
+        <% if(messages.error) { %>
+        <li><%= messages.error %></li>
+        <% } %>
+
+      </ul>
+
       <div class="field">
         <label for="email">Email</label>
         <input type="email" name="email" id="email">
@@ -28,6 +42,8 @@
         <input type="password" name="password" id="password">
       </div>
       <button><img src="/images/next.png" alt="next"></button>
+
+      <a href="signup">Dont have an account?</a>
     </form>
 
   </body>
