--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -17,26 +17,35 @@
       </div>
     </div>
 
-    <form class="signup_login" action="">
+    <form class="signup_login" action="signup" method="POST">
       <h2>Sign Up!</h2>
+
+      <ul>
+        <% if(typeof errors != 'undefined') {%>
+          <% errors.forEach(error => { %>
+            <li><%= error.message %></li>
+          <% }) %>
+        <% }%>
+      </ul>
+
       <div class="field">
         <label for="email">Email</label>
-        <input type="email" name="email" id="email">
+        <input type="email" name="email" id="email" required>
       </div>
       <div class="field">
         <label for="first_name">First Name</label>
-        <input type="text" name="first_name" id="first_name">
+        <input type="text" name="first_name" id="first_name" required>
       </div>
       <div class="field">
       <label for="last_name">Last Name</label>
-      <input type="text" name="last_name" id="last_name">
+      <input type="text" name="last_name" id="last_name" required>
       </div>
       <div class="field">
         <label for="password">Password</label>
-        <input type="password" name="password" id="password">
+        <input type="password" name="password" id="password" required>
       </div><div class="field">
-        <label for="re_password">Repeat Password</label>
-        <input type="password" name="re_password" id="re_password">
+        <label for="re_password">Confirm Password</label>
+        <input type="password" name="re_password" id="re_password" required>
       </div>
       <br>
       <label for="description">Description</label>
@@ -45,6 +54,8 @@
         <textarea name="description" id="description"></textarea>
         <button><img src="/images/next.png" alt="next"></button>
       </div>
+
+      <a href="login">Already have an account?</a>
     </form>
 
   </body>
