--- a/public/stylesheets/dashboard.css
+++ b/public/stylesheets/dashboard.css
@@ -7,6 +7,7 @@
 
 #about_user {
     display: flex;
+    justify-content: space-between;
 }
 
 #profile_pic {
@@ -23,3 +24,8 @@ a {
     font-size: 1.5rem;
     color: #8be9fd;
 }
+#add_new_lesson {
+    font-size: 1rem;
+    text-align: center;
+    display: block;
+    }
