--- a/views/lecture.ejs
+++ b/views/lecture.ejs
@@ -27,7 +27,7 @@
       <p class="comment"><%=creation_date%></p>
       <p class="comment"><%=ending_date%></p>
     </div>
-      <button><img id="delete" src="/images/delete.png" alt="delete" style="width: 4rem"></button>
+      <button><img id="delete" src="/images/delete.png" alt="delete" style="width: 4rem" onclick="location.href = 'http://localhost:3000/user/dashboard'"></button>
   </div>
 
   <div class="container" id="chat">
