--- a/views/lecture.ejs
+++ b/views/lecture.ejs
@@ -24,14 +24,14 @@
   <div id="description" class="container">
     <div class="flex">
       <h2><%=title%></h2>
-      <p class="comment"><%=creation_date%></p>
-      <p class="comment"><%=ending_date%></p>
+      <p class="comment">Start: <%=creation_date%></p>
+      <p class="comment">End:  ㅤ   ㅤ  <%=ending_date%></p>
     </div>
       <button><img id="delete" src="/images/delete.png" alt="delete" style="width: 4rem" onclick="location.href = 'http://localhost:3000/user/dashboard'"></button>
   </div>
 
   <div class="container" id="chat">
-
+    <h2>Chat</h2>
   </div>
 
 
