--- a/views/newlecture.ejs
+++ b/views/newlecture.ejs
@@ -39,6 +39,10 @@
         <input type="title" name="title" id="title" required>
       </div>
       <div class="field">
+        <label for="code">Code</label>
+        <input type="code" name="code" id="code" pattern="[0-9]{4}" placeholder="1234">
+      </div>
+      <div class="field">
         <label for="description">Description</label>
         <textarea name="description" id="description"></textarea>
       </div>
