--- a/public/stylesheets/dashboard.css
+++ b/public/stylesheets/dashboard.css
@@ -24,6 +24,14 @@ a {
     font-size: 1.5rem;
     color: #8be9fd;
 }
+
+.date {
+    font-size: 0.8rem;
+    white-space: nowrap;
+    overflow: hidden;
+    max-width: 22ch;
+}
+
 #add_new_lesson {
     font-size: 1rem;
     text-align: center;
