--- a/public/stylesheets/lecture.css
+++ b/public/stylesheets/lecture.css
@@ -6,6 +6,12 @@
     justify-content: space-between;
 }
 
+.comment {
+    white-space: nowrap;
+    overflow: hidden;
+    max-width: 22ch;
+}
+
 button {
     background: #44475a;
     border: none
