--- a/views/lecture.ejs
+++ b/views/lecture.ejs
@@ -26,13 +26,16 @@
       <h2><%=title%></h2>
       <p class="comment">Start: <%=creation_date%></p>
       <p class="comment">End:  ㅤ   ㅤ  <%=ending_date%></p>
+      <p><%=description%></p>
     </div>
       <button><img id="delete" src="/images/delete.png" alt="delete" style="width: 4rem" onclick="location.href = 'http://localhost:3000/user/dashboard'"></button>
   </div>
 
+
   <div class="container" id="chat">
     <h2>Chat</h2>
   </div>
+
 
 
   </body>
