--- a/views/lecture.ejs
+++ b/views/lecture.ejs
@@ -24,6 +24,7 @@
   <div id="description" class="container">
     <div class="flex">
       <h2><%=title%></h2>
+      <p id="code"><%=code%></p>
       <p class="comment">Start: <%=creation_date%></p>
       <p class="comment">End:  ㅤ   ㅤ  <%=ending_date%></p>
       <p><%=description%></p>
@@ -32,12 +33,30 @@
   </div>
 
 
-  <div class="container" id="chat">
+  <div id="chat">
     <h2>Chat</h2>
+
+    <div class="chatbox">
+    <%for(let i = 0; i < questions.length; i++) {%>
+      <div class="line">
+        <p style="padding-right: 1rem"><%= i %></p>
+        <p><%=questions[i].text%></p>
+      </div>
+        <%for(let j = 0; j < answers.length; j++) {%>
+          <%if(answers[j].question_id == questions[i].question_id) {%>
+            <p class="answer"><%=answers[j].text%></p>
+          <%}%>
+        <%}%>
+      <div class="answer">
+        <form>
+          <input type="text">
+          <button id="answer-btn"><img style="height: 1rem;" src="/images/next.png" alt="next"></button>
+        </form>
+      </div>
+    <%}%>
+    </div>
   </div>
 
-
-
+    <script src="/javascripts/lecture.js"></script>
   </body>
-  <script src="/javascripts/lecture.js"></script>
 </html>
