--- a/public/stylesheets/lecture.css
+++ b/public/stylesheets/lecture.css
@@ -16,3 +16,44 @@ button {
     background: #44475a;
     border: none
 }
+
+#chat {
+    background: #44475a;
+    margin: 15px;
+    padding: 20px;
+}
+
+.chatbox {
+    border: solid 1px #8be9fd;
+    color: #8be9fd;
+    padding: 1rem;
+    height: 400px;
+    overflow-y: scroll;
+}
+
+.line {
+    display: flex;
+}
+
+.answer {
+    background: #282a36;
+    height: 1.5rem;
+    margin: 1px;
+}
+
+.answer form {
+    display: flex;
+}
+
+.answer input {
+    background: #282a36;
+    border: none;
+    outline: none;
+    color: #f8f8f2;
+    flex: 1;
+}
+
+#answer-btn {
+    background: #282a36;
+    flex: 0;
+}
