--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -17,7 +17,9 @@
         <a href="/">Slido</a>
       </div>
       <div class="right_leaning">
-        <a href="/"><img src="/images/logout.png" alt="logout"></a>
+        <form action="logout" method="POST">
+          <button><img src="/images/logout.png" alt="logout"></button>
+        </form>
       </div>
     </div>
 
