--- a/public/stylesheets/lecture.css
+++ b/public/stylesheets/lecture.css
@@ -4,6 +4,8 @@
     padding: 20px;
     display: flex;
     justify-content: space-between;
+    color: #8be9fd;
+    font-weight: bold;
 }
 
 .comment {
@@ -13,7 +15,7 @@
 }
 
 button {
-    background: #44475a;
+    background: none;
     border: none
 }
 
