--- a/views/guestlecture.ejs
+++ b/views/guestlecture.ejs
@@ -22,7 +22,7 @@
       </div>
     </div>
 
-    <div id="description" class="container">
+    <div id="description" class="container" style="background: url('../<%=image%>');  background-size: cover; opacity: 0.75;">
         <h2><%=title%></h2>
       <span id="code"><%=code%></span>
         <p class="comment">Start: <%=creation_date%></p>
