added grading sistem for lectures

--- a/public/stylesheets/guestlecture.css
+++ b/public/stylesheets/guestlecture.css
@@ -68,3 +68,7 @@ input {
     background: #282a36;
     border: none
 }
+
+.grade_button:hover img {
+    content: url("../images/fullStar.png");
+}
